# codeguardian

./: .env.template  .gitignore  ARCHITECTURE_REVIEW.md  LICENSE  README.md  check_tool.py  debug_ollama.py  pyproject.toml  test_chroma.py
knowledge/: be-test-junit.txt  fe-test-jasmine.txt
src/codeguardian/: agents.py  crew.py  index.py  main.py  tasks.py
src/codeguardian/config/: rag_config.yaml  settings.py
src/codeguardian/tools/: build_tools.py  file_writer_tool.py  local_rag_tool.py  tools.py
tests/: test_config.py
