[project]
name = "codeguardian"
version = "0.1.0"
description = "CodeGuardian using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
codeguardian = "codeguardian.main:run"
run_crew = "codeguardian.main:run"
train = "codeguardian.main:train"
replay = "codeguardian.main:replay"
test = "codeguardian.main:test"
run_with_trigger = "codeguardian.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
