[project]
name = "codeguardian"
version = "0.1.0"
description = "CodeGuardian using crewAI"
authors = [{ name = "Aymen Mastouri", email = "aymen.mastouri@icloud.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[tools]==1.5.0",
    "litellm>=1.80.10",
    "openai>=2.11.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "ollama==0.4.5",
]

[project.scripts]
codeguardian = "codeguardian.main:run"
run_crew = "codeguardian.main:run"
train = "codeguardian.main:train"
replay = "codeguardian.main:replay"
test = "codeguardian.main:test"
run_with_trigger = "codeguardian.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
